# Gioco-Scacchi

./: .gitignore  CMakeLists.txt  README.md  buildDebug.bat
include/: Game.h  Header.h  Pedina.h  Pezzi.h  Scacchiera.h  Soluzione.cpp  pedone.h
src/: Game.cpp  Gioco.cpp  MosseSpeciali.cpp  MosseSpeciali1.cpp  Pedina.cpp  Pezzi.cpp  RepGame.cpp  Replay.cpp  Scacchiera.cpp  main.cpp  pedone.cpp
